--- a/package.json
+++ b/package.json
@@ -9,5 +9,12 @@
   "private": null,
   "devDependencies": {
     "cypress": "^3.8.3"
+  },
+  "dependencies": {
+    "superstatic": "^6.0.4"
+  },
+  "scripts": {
+    "start": "superstatic src --port 3001",
+    "cy:open": "yarn start & cypress open"
   }
 }
