--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "cypress": "^3.8.3"
   },
   "dependencies": {
+    "browser-sync": "^2.26.7",
     "superstatic": "^6.0.4"
   },
   "scripts": {
     "start": "superstatic src --port 3001",
+    "start:hot": "node server.js",
     "cy:open": "yarn start & cypress open"
   }
 }
